--- a/src/components/CCIP/Landing/ccip-landing.astro
+++ b/src/components/CCIP/Landing/ccip-landing.astro
@@ -29,14 +29,16 @@ const supportedTokens = getAllSupportedTokens({
 
 const tokens = Object.keys(supportedTokens).sort((a, b) => a.localeCompare(b, undefined, { sensitivity: "base" }))
 
-const allTokens = tokens.map((token) => {
-  const logo = getTokenIconUrl(token) || ""
-  return {
-    name: token,
-    logo,
-    totalNetworks: getChainsOfToken({ token, filter: environment }).length,
-  }
-})
+const allTokens = tokens
+  .map((token) => {
+    const logo = getTokenIconUrl(token) || ""
+    return {
+      name: token,
+      logo,
+      totalNetworks: getChainsOfToken({ token, filter: environment }).length,
+    }
+  })
+  .sort((a, b) => a.name.localeCompare(b.name))
 
 const searchLanes = getSearchLanes({ environment })
 ---
