Improve sizing of  Chain cards

--- a/src/components/CCIP/Cards/NetworkCard.css
+++ b/src/components/CCIP/Cards/NetworkCard.css
@@ -1,7 +1,7 @@
 .network-card__container {
   display: flex;
   padding: var(--space-6x);
-  gap: var(--space-4x);
+  gap: var(--space-3x);
 
   background: var(--white);
   border: 1px solid var(--gray-200);
@@ -13,19 +13,23 @@
 }
 
 .network-card__container img {
-  width: var(--space-8x);
-  height: var(--space-8x);
+  width: var(--space-10x);
+  height: var(--space-10x);
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .network-card__container h3 {
   font-size: var(--space-4x);
   font-weight: var(--font-weight-medium);
+  line-height: var(--space-6x);
   color: var(--gray-950);
-  margin-bottom: 0;
+  margin-bottom: var(--space-1x);
 }
 
 .network-card__container p {
   margin-bottom: 0;
   font-size: var(--space-3x);
+  line-height: var(--space-5x);
   color: var(--gray-500);
 }
