Update Page to be "directory" instead than "supported-networks"

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
         <a href="/getting-started/conceptual-overview">General</a>
         <a href="/resources/link-token-contracts">Link Token Contracts</a>
         <a href="/ccip/getting-started">Getting Started with CCIP</a>
-        <a href="/ccip/supported-networks">CCIP Supported Networks</a>
+        <a href="/ccip/directory">CCIP Supported Networks</a>
         <a href="/data-feeds/price-feeds/addresses">Data Feed Addresses</a>
         <a href="/data-feeds/proof-of-reserve/addresses">Proof of Reserve Feed Addresses</a>
         <a href="/data-streams/getting-started-hardhat">Getting Started with Data Streams</a>
