--- a/src/components/CCIP/Landing/ccip-landing.astro
+++ b/src/components/CCIP/Landing/ccip-landing.astro
@@ -52,7 +52,7 @@ const searchLanes = getSearchLanes({ environment })
       <div class="networks__grid">
         {
           networks.map((chain) => (
-            <a href={`/ccip/supported-networks/${environment}/chain/${chain.chain}`}>
+            <a href={`/ccip/directory/${environment}/chain/${chain.chain}`}>
               <NetworkCard
                 name={chain.name}
                 totalLanes={chain.totalLanes}
@@ -76,7 +76,7 @@ const searchLanes = getSearchLanes({ environment })
             <TokenCard
               name={token.name}
               logo={token.logo}
-              link={`/ccip/supported-networks/${environment}/token/${token.name}`}
+              link={`/ccip/directory/${environment}/token/${token.name}`}
             />
           ))
         }
