--- a/src/components/CCIP/Landing/ccip-landing.astro
+++ b/src/components/CCIP/Landing/ccip-landing.astro
@@ -89,10 +89,9 @@ const searchLanes = getSearchLanes({ environment })
   .layout {
     --gutter: var(--space-6x);
     --doc-padding: 2rem;
-    /* margin-bottom: 0; */
     margin: var(--space-8x) auto;
-    display: grid;
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
     gap: var(--gutter);
     padding: var(--doc-padding);
   }
@@ -121,13 +120,13 @@ const searchLanes = getSearchLanes({ environment })
   .networks__grid {
     display: grid;
     grid-template-columns: 1fr;
-    gap: var(--space-8x);
+    gap: var(--space-1x);
   }
 
   .tokens__grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: var(--space-8x);
+    grid-template-columns: 33% 33% 33%;
+    gap: var(--space-1x);
   }
 
   @media (min-width: 50em) {
@@ -138,7 +137,8 @@ const searchLanes = getSearchLanes({ environment })
 
   @media (min-width: 992px) {
     .layout {
-      grid-template-columns: 1fr 1fr;
+      --doc-padding: 2rem;
+      flex-direction: row;
       gap: var(--space-24x);
     }
 
