Improve image fallback handling

--- a/src/components/CCIP/Chain/Chain.astro
+++ b/src/components/CCIP/Chain/Chain.astro
@@ -48,14 +48,7 @@ const searchLanes = getSearchLanes({ environment })
 
 <CcipLayout frontmatter={entry.data} {headings} environment={environment}>
   <Drawer client:only="react" />
-  <ChainHero
-    chains={networks}
-    tokens={allTokens}
-    client:only="react"
-    network={network}
-    environment={environment}
-    lanes={searchLanes}
-  />
+  <ChainHero chains={networks} tokens={allTokens} network={network} environment={environment} lanes={searchLanes} />
   <section class="layout">
     <div>
       <Table
@@ -141,9 +134,11 @@ const searchLanes = getSearchLanes({ environment })
     .networks__grid {
       grid-template-columns: 1fr 1fr;
       gap: var(--space-6x);
+      min-height: 420px;
     }
 
     .tokens__grid {
+      min-height: 420px;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       gap: var(--space-4x);
     }
