--- a/src/components/CCIP/ChainHero/ChainHero.css
+++ b/src/components/CCIP/ChainHero/ChainHero.css
@@ -1,6 +1,7 @@
 .ccip-chain-hero {
   background-color: var(--gray-100);
   border-bottom: 1px solid var(--gray-200);
+  min-height: 241px;
 }
 
 .ccip-chain-hero__heading {
@@ -106,7 +107,7 @@
 
 .ccip-chain-hero__feeTokens__item__logo {
   width: var(--space-5x);
-  height: var(--space5x);
+  height: var(--space-5x);
   border-radius: 50%;
 }
 
