--- a/src/components/CCIP/Cards/TokenCard.css
+++ b/src/components/CCIP/Cards/TokenCard.css
@@ -18,7 +18,8 @@
   background-color: var(--gray-50);
 }
 
-.token-card__container img {
+.token-card__container object,
+.token-card__container object img {
   width: var(--space-8x);
   height: var(--space-8x);
   border-radius: 50%;
