--- a/src/components/CCIP/Search/Search.css
+++ b/src/components/CCIP/Search/Search.css
@@ -1,6 +1,6 @@
 .ccip-hero__search {
   background-color: white;
-  padding: var(--space-4x);
+  padding: 18px;
   display: flex;
   gap: var(--space-4x);
   width: 100%;
@@ -29,10 +29,6 @@
 .ccip-hero__search.open {
   border-color: var(--gray-400);
   z-index: 3;
-}
-
-.ccip-hero__search.small {
-  padding: var(--space-2x);
 }
 
 .ccip-hero__search input {
@@ -79,7 +75,6 @@
   font-style: normal;
   font-weight: 600;
   font-size: var(--space-4x);
-
   color: #000000;
 }
 
@@ -99,8 +94,8 @@
   padding-top: var(--space-3x);
   padding-bottom: var(--space-3x);
   cursor: pointer;
-  padding-left: var(--space-10x);
-  padding-right: var(--space-10x);
+  padding-left: var(--space-6x);
+  padding-right: var(--space-6x);
 }
 
 .ccip-hero__search-results--small a {
@@ -134,12 +129,36 @@
   font-size: 18px;
   line-height: 24px;
   color: var(--gray-500);
-  padding-left: var(--space-10x);
-  padding-right: var(--space-10x);
+  padding-left: var(--space-6x);
+  padding-right: var(--space-6x);
   padding-top: var(--space-6x);
-  padding-bottom: var(--space-2x);
 }
 
 .ccip-hero__search-results__no-result {
   padding-bottom: var(--space-6x);
+}
+
+@media (min-width: 992px) {
+  .ccip-hero__search.small {
+    padding: var(--space-2x);
+  }
+
+  .ccip-hero__search-results li a {
+    display: flex;
+    gap: var(--space-4x);
+    align-items: center;
+    padding-top: var(--space-3x);
+    padding-bottom: var(--space-3x);
+    cursor: pointer;
+    padding-left: var(--space-10x);
+    padding-right: var(--space-10x);
+  }
+
+  .ccip-hero__search-results__title,
+  .ccip-hero__search-results__no-result {
+    padding-left: var(--space-10x);
+    padding-right: var(--space-10x);
+    padding-top: var(--space-6x);
+    padding-bottom: var(--space-2x);
+  }
 }
