--- a/src/components/CCIP/Tables/Table.css
+++ b/src/components/CCIP/Tables/Table.css
@@ -10,6 +10,8 @@
 
 .ccip-table__wrapper {
   overflow-x: auto;
+  max-width: 80vw;
+  margin: 0 auto;
 }
 
 .ccip-table th,
@@ -129,6 +131,7 @@
 
 .ccip-table__filters {
   display: flex;
+  flex-wrap: wrap-reverse;
   justify-content: space-between;
   align-items: center;
   gap: var(--space-4x);
@@ -165,6 +168,10 @@
 
   .ccip-table__drawer-container {
     padding: var(--space-10x);
+  }
+
+  .ccip-table__wrapper {
+    max-width: 100%;
   }
 
   .ccip-table th,
