--- a/src/components/CCIP/Tables/TableSearchInput.css
+++ b/src/components/CCIP/Tables/TableSearchInput.css
@@ -10,8 +10,18 @@
   gap: var(--space-4x);
 }
 
+.tableSearchInput:has(input) {
+  width: 100%;
+}
+
 .tableSearchInput input {
   padding: 0;
   border: none;
   outline: none;
+}
+
+@media (min-width: 768px) {
+  .tableSearchInput:has(input) {
+    width: auto;
+  }
 }
