--- a/src/components/CCIP/Chain/Chain.astro
+++ b/src/components/CCIP/Chain/Chain.astro
@@ -89,7 +89,6 @@ const searchLanes = getSearchLanes({ environment })
   .ccip-heading {
     display: flex;
     padding-bottom: var(--space-4x);
-    border-bottom: 1px solid var(--gray-200);
     margin-bottom: var(--space-6x);
     justify-content: space-between;
   }
@@ -110,13 +109,13 @@ const searchLanes = getSearchLanes({ environment })
   .networks__grid {
     display: grid;
     grid-template-columns: 1fr;
-    gap: var(--space-1x);
+    gap: var(--space-2x);
   }
 
   .tokens__grid {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
-    gap: var(--space-1x);
+    grid-template-columns: 32% 32% 32%;
+    gap: var(--space-2x);
   }
 
   @media (min-width: 50em) {
@@ -127,7 +126,8 @@ const searchLanes = getSearchLanes({ environment })
 
   @media (min-width: 992px) {
     .layout {
-      flex-direction: row;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       gap: var(--space-24x);
     }
 
@@ -141,6 +141,10 @@ const searchLanes = getSearchLanes({ environment })
       min-height: 420px;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       gap: var(--space-4x);
+    }
+
+    .ccip-heading {
+      border-bottom: 1px solid var(--gray-200);
     }
   }
 </style>
