--- a/src/components/CCIP/ChainHero/LaneDetailsHero.css
+++ b/src/components/CCIP/ChainHero/LaneDetailsHero.css
@@ -15,13 +15,18 @@
 
 .lane-details-hero__networks {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: start;
   gap: var(--space-6x);
-
   font-style: normal;
   font-weight: var(--font-weight-medium);
   font-size: 28px;
   margin: var(--space-10x) 0;
+}
+
+.lane-details-hero__networks svg {
+  transform: rotate(90deg);
+  margin-left: var(--space-4x);
 }
 
 .lane-details-hero__network {
@@ -62,5 +67,15 @@
 
   .lane-details-hero__details {
     grid-template-columns: 1fr 2fr;
+  }
+
+  .lane-details-hero__networks {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .lane-details-hero__networks svg {
+    transform: rotate(0deg);
+    margin-left: 0;
   }
 }
