--- a/src/components/CCIP/Landing/ccip-landing.astro
+++ b/src/components/CCIP/Landing/ccip-landing.astro
@@ -120,13 +120,13 @@ const searchLanes = getSearchLanes({ environment })
   .networks__grid {
     display: grid;
     grid-template-columns: 1fr;
-    gap: var(--space-1x);
+    gap: var(--space-2x);
   }
 
   .tokens__grid {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
-    gap: var(--space-1x);
+    grid-template-columns: 32% 32% 32%;
+    gap: var(--space-2x);
   }
 
   @media (min-width: 50em) {
@@ -138,7 +138,8 @@ const searchLanes = getSearchLanes({ environment })
   @media (min-width: 992px) {
     .layout {
       --doc-padding: 2rem;
-      flex-direction: row;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       gap: var(--space-24x);
     }
 
