--- a/src/components/CCIP/Token/Token.astro
+++ b/src/components/CCIP/Token/Token.astro
@@ -107,7 +107,7 @@ const searchLanes = getSearchLanes({ environment })
 <style scoped="false">
   .layout {
     --gutter: var(--space-6x);
-    --doc-padding: 2rem;
+    --doc-padding: var(--space-6x);
     /* margin-bottom: 0; */
     margin: var(--space-8x) auto;
     display: grid;
