--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -73,7 +73,7 @@ const includeLinkToWalletScript = !!Astro.props.frontmatter.metadata?.linkToWall
       display: grid;
       grid-template-columns: auto;
       --gutter: var(--space-6x);
-      --doc-padding: 2rem;
+      --doc-padding: var(--space-6x);
       margin-bottom: 0;
     }
 
