--- a/src/components/CCIP/ChainHero/ChainHero.css
+++ b/src/components/CCIP/ChainHero/ChainHero.css
@@ -37,7 +37,7 @@
 
 .ccip-chain-hero__content {
   --gutter: var(--space-6x);
-  --doc-padding: 2rem;
+  --doc-padding: var(--space-6x);
   gap: var(--gutter);
   padding-left: var(--space-4x);
   padding-right: var(--space-4x);
@@ -66,7 +66,7 @@
 
 .ccip-chain-hero__details {
   display: grid;
-  gap: var(--space-4x);
+  gap: var(--space-6x);
   grid-template-columns: 1fr;
 }
 
@@ -77,7 +77,7 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 22px;
-  padding-bottom: var(--space-4x);
+  padding-bottom: var(--space-2x);
   color: var(--gray-500);
 }
 
@@ -152,6 +152,7 @@
 
   .ccip-chain-hero__details {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: var(--space-4x);
   }
 
   .ccip-chain-hero__feeTokens__list {
