--- a/src/components/CCIP/Token/Token.astro
+++ b/src/components/CCIP/Token/Token.astro
@@ -56,7 +56,7 @@ const searchLanes = getSearchLanes({ environment })
   <ChainHero
     chains={networks}
     tokens={allTokens}
-    client:only="react"
+    client:load
     lanes={searchLanes}
     token={{
       name: data[Object.keys(data)[0]]?.name || "",
@@ -70,7 +70,7 @@ const searchLanes = getSearchLanes({ environment })
   <section class="layout">
     <div>
       <Table
-        client:only="react"
+        client:load
         environment={environment}
         networks={Object.keys(data)
           .map((key) => {
