fix: token grid

--- a/src/components/CCIP/Landing/ccip-landing.astro
+++ b/src/components/CCIP/Landing/ccip-landing.astro
@@ -124,7 +124,7 @@ const searchLanes = getSearchLanes({ environment })
 
   .tokens__grid {
     display: grid;
-    grid-template-columns: 32% 32% 32%;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: var(--space-2x);
   }
 
