--- a/src/components/CCIP/ChainHero/ChainHero.css
+++ b/src/components/CCIP/ChainHero/ChainHero.css
@@ -39,10 +39,7 @@
   --gutter: var(--space-6x);
   --doc-padding: var(--space-6x);
   gap: var(--gutter);
-  padding-left: var(--space-4x);
-  padding-right: var(--space-4x);
-  padding-top: var(--space-10x);
-  padding-bottom: var(--space-10x);
+  padding: var(--space-6x);
   margin: 0 auto;
   display: flex;
   flex-direction: column;
