--- a/src/components/CCIP/Chain/Chain.astro
+++ b/src/components/CCIP/Chain/Chain.astro
@@ -121,7 +121,7 @@ const searchLanes = getSearchLanes({ environment })
 
   .tokens__grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 32% 32% 32%;
     gap: var(--space-2x);
   }
 
