--- a/src/components/Segment/Segments.css
+++ b/src/components/Segment/Segments.css
@@ -14,7 +14,7 @@
   font-size: 14px;
   font-weight: 600;
   line-height: 22px;
-  width: 112px;
+  width: 92px;
   text-align: center;
 }
 
@@ -25,4 +25,10 @@
 .segments__container a.active {
   background: var(--Button-Tertiary-Background-Selected, #f5f7fa);
   color: #0847f7;
+}
+
+@media (min-width: 992px) {
+  .segments__container a {
+    width: 112px;
+  }
 }
