--- a/src/components/CCIP/Landing/ccip-landing.astro
+++ b/src/components/CCIP/Landing/ccip-landing.astro
@@ -14,6 +14,8 @@ import NetworkCard from "~/components/CCIP/Cards/NetworkCard"
 import TokenCard from "~/components/CCIP/Cards/TokenCard"
 import { getTokenIconUrl } from "~/features/utils"
 import Drawer from "../Drawer/Drawer"
+import NetworkGrid from "./NetworkGrid"
+import TokenGrid from "../TokenGrid/TokenGrid"
 export type Props = {
   environment: Environment
 }
@@ -48,38 +50,15 @@ const searchLanes = getSearchLanes({ environment })
       <div class="ccip-heading">
         <h2>Networks {environment} <span>({networks.length})</span></h2>
       </div>
-      <div class="networks__grid">
-        {
-          networks.map((chain) => (
-            <a href={`/ccip/supported-networks/${environment}/chain/${chain.chain}`}>
-              <NetworkCard
-                name={chain.name}
-                totalLanes={chain.totalLanes}
-                totalTokens={chain.totalTokens}
-                logo={chain.logo}
-              />
-            </a>
-          ))
-        }
-      </div>
+      <NetworkGrid networks={networks} environment={environment} client:load />
     </div>
     <div>
       <div class="ccip-heading">
         <h2>Tokens <span>({allTokens.length})</span></h2>
-        <a class="button secondary" href="/ccip/concepts/cross-chain-tokens">List my token</a>
+        <a class="button secondary" href="/ccip/concepts/cross-chain-tokens">Add my token</a>
       </div>
 
-      <div class="tokens__grid">
-        {
-          allTokens.map((token) => (
-            <TokenCard
-              name={token.name}
-              logo={token.logo}
-              link={`/ccip/supported-networks/${environment}/token/${token.name}`}
-            />
-          ))
-        }
-      </div>
+      <TokenGrid tokens={allTokens} environment={environment} client:load />
     </div>
   </section>
 </CcipLayout>
@@ -116,18 +95,6 @@ const searchLanes = getSearchLanes({ environment })
     letter-spacing: 0.5px;
   }
 
-  .networks__grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: var(--space-2x);
-  }
-
-  .tokens__grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: var(--space-2x);
-  }
-
   @media (min-width: 50em) {
     .layout {
       max-width: min(calc(1440px - 2 * var(--space-16x)), calc(100% - 2 * var(--space-16x)));
@@ -141,16 +108,6 @@ const searchLanes = getSearchLanes({ environment })
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: var(--space-24x);
-    }
-
-    .networks__grid {
-      grid-template-columns: 1fr 1fr;
-      gap: var(--space-6x);
-    }
-
-    .tokens__grid {
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      gap: var(--space-4x);
     }
   }
 </style>
