fix: tabs css on iphone se

--- a/src/components/CCIP/Tables/Tabs.css
+++ b/src/components/CCIP/Tables/Tabs.css
@@ -1,7 +1,7 @@
 .tabs {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: var(--space-6x);
 }
 
 .tabs__tab {
@@ -19,4 +19,14 @@
   color: var(--gray-900);
   padding-bottom: 5px;
   border-bottom: 3px solid #2e7bff;
+}
+
+@media (max-width: 375px) {
+  .tab {
+    gap: var(--space-4x);
+  }
+
+  .tabs__tab {
+    font-size: var(--space-4x);
+  }
 }
