fix: Breadcrum + page titles

--- a/src/components/CCIP/Chain/Chain.astro
+++ b/src/components/CCIP/Chain/Chain.astro
@@ -46,7 +46,14 @@ const lanes = await getAllNetworkLanes({
 const searchLanes = getSearchLanes({ environment })
 ---
 
-<CcipLayout frontmatter={entry.data} {headings} environment={environment}>
+<CcipLayout
+  frontmatter={{
+    title: `CCIP Supported Networks - ${network.name}`,
+    section: "ccip",
+  }}
+  {headings}
+  environment={environment}
+>
   <Drawer client:only="react" />
   <ChainHero
     chains={networks}
