--- a/src/components/CCIP/Token/Token.astro
+++ b/src/components/CCIP/Token/Token.astro
@@ -52,7 +52,14 @@ const lanes = getAllTokenLanes({
 const searchLanes = getSearchLanes({ environment })
 ---
 
-<CcipLayout frontmatter={entry.data} {headings} environment={environment}>
+<CcipLayout
+  frontmatter={{
+    title: `CCIP Supported Tokens - ${token}`,
+    section: "ccip",
+  }}
+  {headings}
+  environment={environment}
+>
   <ChainHero
     chains={networks}
     tokens={allTokens}
