--- a/src/layouts/CcipLayout.astro
+++ b/src/layouts/CcipLayout.astro
@@ -7,6 +7,7 @@ import BaseLayout from "./BaseLayout.astro"
 import DocsNavigation from "~/components/DocsNavigation"
 import Segments from "~/components/Segment/Segments"
 import { Environment } from "~/config/data/ccip"
+import Drawer from "~/components/CCIP/Drawer/Drawer"
 
 interface Props {
   frontmatter: BaseFrontmatter
@@ -32,6 +33,7 @@ const includeLinkToWalletScript = !!Astro.props.frontmatter.metadata?.linkToWall
 ---
 
 <BaseLayout title={formattedContentTitle} metadata={frontmatter.metadata}>
+  <Drawer client:only="react" />
   <StickyHeader client:media="(max-width: 50em)" {initialHeadings} />
   <DocsNavigation client:load pathname={currentPage}>
     <Segments
