fix: adjust left grid sticky and padding

--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -75,7 +75,7 @@ const sidebarSections = getSidebarSections(section)
 ---
 
 <nav aria-labelledby="grid-left" class={styles.nav} data-sticky>
-  <ul class={styles.navGroups} data-sticky>
+  <ul class={styles.navGroups}>
     {
       sidebarSections.map((group) => (
         <li
