--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,6 +6,7 @@ import Header from "~/components/Header/Header.astro"
 import { NewsletterCTA } from "~/components/Footer/NewsletterCTA"
 import Footer from "~/components/Footer/Footer.astro"
 import { Metadata, QuickstartsFrontmatter } from "~/content.config.ts"
+import "~/styles/tailwind.css"
 //
 
 interface Props {
