fix: disable preflight

--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -4,6 +4,7 @@ import "../styles/index.css"
 import "../styles/migrated.css"
 import "../styles/prism-darcula.css"
 import "@chainlink/design-system/global-styles.css"
+import "../styles/tailwind.css"
 
 export interface Props {
   title: string
