--- a/src/components/Header/Nav/ProductNavigation/Desktop/megaMenu.module.css
+++ b/src/components/Header/Nav/ProductNavigation/Desktop/megaMenu.module.css
@@ -10,14 +10,13 @@
 }
 
 .wrapper {
-  max-width: 1360px;
+  max-width: 1312px;
   width: 100%;
   background-color: white;
   height: fit-content;
-  border-radius: 0.5rem;
-  display: grid;
-  grid-template-columns: 3fr 1fr;
   overflow: hidden;
+  display: grid;
+  grid-template-columns: 1fr 328px;
   box-shadow:
     4.6px 9.3px 54px 1px rgba(152, 160, 185, 0.04),
     2.1px 4.3px 32px -0.7px rgba(152, 160, 185, 0.31),
@@ -25,108 +24,84 @@
     0.3px 0.5px 0.8px 0px rgba(152, 160, 185, 0.12);
 }
 
-.wrapper h2 {
-  padding-bottom: var(--space-4x);
-  color: var(--gray-500);
-  text-transform: uppercase;
-  border-bottom: 1px solid var(--gray-200);
-  margin-bottom: var(--space-8x);
+.menuSection__primary {
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
-.wrapper h3 {
-  font-family: var(--font-family-text);
-  color: var(--gray-900);
+.wrapper header {
+  display: flex;
+  align-items: center;
+  gap: var(--space-3x);
+  padding: var(--space-4x) var(--space-6x);
+}
+
+.wrapper header > p {
+  margin-bottom: 0;
+  font-family: var(--font-mono);
+  font-size: var(--Font-Size-Eyebrow, 12px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: var(--Line-Height-Eyebrow, 12px); /* 100% */
+  letter-spacing: 0.6px;
+  text-transform: uppercase;
+  color: var(--Color-Tertiary, rgba(20, 25, 33, 0.5));
 }
 
 .wrapper p {
-  color: var(--gray-500);
-  margin-top: var(--space-2x);
-  margin-bottom: var(--space-3x);
-  line-height: var(--space-6x);
-}
-
-.resourcesMenuContentMain {
-  padding-top: var(--space-16x);
-  padding-left: var(--space-16x);
-  padding-bottom: var(--space-16x);
-  padding-right: var(--space-8x);
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: var(--space-16x);
-}
-
-.resourcesMenuContentRow {
-  display: flex;
-  flex-direction: column;
-}
-
-.verticalDivider {
-  border-left: 1px solid var(--gray-300);
-  margin: 0 var(--space-3x);
-}
-
-.links {
-  margin-bottom: var(--space-10x);
-}
-
-.links a {
-  font-weight: var(--font-weight-medium);
-  color: var(--color-text-link);
-}
-
-.resourcesMenuContentFeatured {
-  padding-top: var(--space-16x);
-  padding-left: var(--space-8x);
-  padding-bottom: var(--space-16x);
-  padding-right: var(--space-16x);
-  background-color: var(--gray-100);
-}
-
-.megaMenuLink {
-  display: flex;
-  align-items: center;
-  gap: var(--space-2x);
-}
-
-.megaMenuLink h3 {
   margin-bottom: 0;
 }
 
-.megaMenuLink img {
-  width: var(--space-5x);
-  height: var(--space-5x);
+.menuSection__nested {
+  display: grid;
+  grid-template-columns: 328px 328px 328px;
 }
 
-.featuredImage {
-  width: 100%;
+.menuSection__group {
+  display: grid;
+  grid-template-columns: 328px;
 }
 
-.divider {
-  border-bottom: 1px solid var(--gray-200);
-  margin: var(--space-8x) auto;
-}
-
-.bottomLinks {
-  margin-top: auto;
+.menuSection__interoperability {
   display: flex;
   flex-direction: column;
-  gap: var(--space-3x);
+  height: 100%;
 }
 
-.bottomLinks div {
+.menuSection__compliance {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.groupItem {
   display: flex;
   align-items: center;
-  gap: var(--space-2x);
-  line-height: var(--space-6x);
+  padding: var(--space-6x);
+  gap: var(--space-3x) var(--space-4x);
 }
 
-.bottomLinks a {
-  color: var(--gray-900);
+.itemList {
+  padding: var(--space-2x) 0;
+  border-left: 1px solid var(--gray-200);
 }
 
-/* TODO: change with a var when available in the chainlink repo */
-.bottomLink a:hover {
-  color: #0847f7;
+.groupItemTitle {
+  color: var(--Color-Primary, #0e1119);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%; /* 21.6px */
+}
+
+.groupItemDescription {
+  color: var(--Gray-gray-500, #858a95);
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 157.143% */
+  letter-spacing: -0.14px;
 }
 
 @media screen and (min-width: 768px) {
