--- a/src/pages/ccip/index.astro
+++ b/src/pages/ccip/index.astro
@@ -1,6 +1,6 @@
 ---
-import DocsLayout from "~/layouts/DocsLayout.astro"
 import { getEntry, render } from "astro:content"
+import DocsV3Layout from "~/layouts/DocsV3Layout/DocsV3Layout.astro"
 
 const entry = await getEntry("ccip", "index")
 if (!entry) {
@@ -11,6 +11,4 @@ if (!entry) {
 const { Content, headings } = await render(entry)
 ---
 
-<DocsLayout frontmatter={entry.data} {headings}>
-  <Content />
-</DocsLayout>
+<DocsV3Layout frontmatter={entry.data} {headings} />
