--- a/src/pages/ccip/index.astro
+++ b/src/pages/ccip/index.astro
@@ -11,4 +11,6 @@ if (!entry) {
 const { Content, headings } = await render(entry)
 ---
 
-<DocsV3Layout frontmatter={entry.data} {headings} />
+<DocsV3Layout frontmatter={entry.data} {headings}>
+  <Content />
+</DocsV3Layout>
