--- a/src/components/Cards/cards.module.css
+++ b/src/components/Cards/cards.module.css
@@ -14,7 +14,7 @@
 }
 
 .card {
-  padding: 20px var(--space-6x);
+  padding: var(--space-5x) var(--space-6x);
   background: #fff;
 }
 
@@ -34,6 +34,7 @@
   display: flex;
   gap: var(--space-2x);
   align-items: center;
+  cursor: default;
 }
 
 .link:hover span {
