--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,30 +1,26 @@
 ---
 import ProductTabs from "../features/landing/sections/ProductTabs.astro"
-import LandingLayout from "../layouts/LandingLayout.astro"
-import HeroCTA from "../features/landing/sections/HeroCTA.astro"
 import BaseLayout from "~/layouts/BaseLayout.astro"
 
 import * as CONFIG from "../config"
 import CardsWrapper from "~/components/Cards/CardsWrapper.astro"
-
-import tokenIcon from "../assets/icons/token-icon.svg"
-import remixIcon from "../assets/icons/remix-logo.svg"
+import type { ICard } from "~/components/Cards/types"
 
 const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.title}`
 
-const sample = [
+const sample: ICard[] = [
   {
     title: "Deploy/enable a token across multiple chains",
     description:
       "Create a new Cross-Chain-Token or enable an established one that can be launched on 50+ chains, providing unparalleled interoperability and reach.",
     links: [
       {
-        icon: tokenIcon,
+        icon: "token",
         href: "https://example.com",
         label: "View Token Manager",
       },
       {
-        icon: remixIcon,
+        icon: "remix",
         href: "https://example.com",
         label: "Open in Remix",
       },
@@ -36,12 +32,12 @@ const sample = [
       "Securely transfer tokens - including ETH, USDC, LINK - and messages between different blockchain networks.",
     links: [
       {
-        icon: tokenIcon,
+        icon: "token",
         href: "https://example.com",
         label: "View Token Manager",
       },
       {
-        icon: remixIcon,
+        icon: "remix",
         href: "https://example.com",
         label: "Open in Remix",
       },
@@ -53,65 +49,7 @@ const sample = [
       "Build token transfers that do more than move value, letting you embed business logic directly into your cross-chain workflows.",
     links: [
       {
-        icon: remixIcon,
-        href: "https://example.com",
-        label: "Open in Remix",
-      },
-    ],
-  },
-  {
-    title: "Deploy/enable a token across multiple chains",
-    description:
-      "Create a new Cross-Chain-Token or enable an established one that can be launched on 50+ chains, providing unparalleled interoperability and reach.",
-    links: [
-      {
-        icon: tokenIcon,
-        href: "https://example.com",
-        label: "View Token Manager",
-      },
-      {
-        icon: remixIcon,
-        href: "https://example.com",
-        label: "Open in Remix",
-      },
-    ],
-  },
-  {
-    title: "Bridge a token",
-    description:
-      "Securely transfer tokens - including ETH, USDC, LINK - and messages between different blockchain networks.",
-    links: [
-      {
-        icon: tokenIcon,
-        href: "https://example.com",
-        label: "View Token Manager",
-      },
-      {
-        icon: remixIcon,
-        href: "https://example.com",
-        label: "Open in Remix",
-      },
-    ],
-  },
-  {
-    title: "Send a token with data",
-    description:
-      "Build token transfers that do more than move value, letting you embed business logic directly into your cross-chain workflows.",
-    links: [
-      {
-        icon: remixIcon,
-        href: "https://example.com",
-        label: "Open in Remix",
-      },
-    ],
-  },
-  {
-    title: "Send a token with data",
-    description:
-      "Build token transfers that do more than move value, letting you embed business logic directly into your cross-chain workflows.",
-    links: [
-      {
-        icon: remixIcon,
+        icon: "remix",
         href: "https://example.com",
         label: "Open in Remix",
       },
