--- a/src/components/LeftSidebar/leftSidebar.module.css
+++ b/src/components/LeftSidebar/leftSidebar.module.css
@@ -120,6 +120,9 @@ details[open] > .navGroupTitle {
 
 .quickLinks {
   margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-2x);
 }
 
 .headerLink {
