--- a/src/components/LayoutHero/LayoutHero.module.css
+++ b/src/components/LayoutHero/LayoutHero.module.css
@@ -19,7 +19,7 @@
   width: 100%;
   height: 100%;
   justify-content: center;
-  max-width: 600px;
+  max-width: 540px;
 }
 
 .heroContentWrapper {
@@ -41,14 +41,14 @@
   color: var(--gray-950);
   margin-bottom: var(--space-3x);
   letter-spacing: -0.48px;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .heroButtons {
   display: flex;
   flex-wrap: wrap;
   gap: var(--space-4x);
-  margin-top: var(--space-2x);
+  margin-top: var(--space-8x);
 }
 
 .heroButtons a.button {
@@ -62,25 +62,25 @@
 }
 
 .heroButtons a.primary {
-  background-color: var(--blue-600);
+  background-color: var(--brand);
   color: white;
-  border: 2px solid var(--blue-600);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .heroButtons a.primary:hover {
-  background-color: var(--blue-700);
-  border-color: var(--blue-700);
+  background-color: var(--blue-800);
 }
 
 .heroButtons a.secondary {
   background-color: transparent;
   color: var(--theme-text);
-  border: 2px solid var(--gray-300);
+  border: 1px solid var(--gray-400);
 }
 
 .heroButtons a.secondary:hover {
-  background-color: var(--gray-100);
-  border-color: var(--gray-400);
+  border-color: var(--gray-500);
 }
 
 .heroImage {
@@ -93,28 +93,4 @@
 .heroImage img {
   max-width: 100%;
   height: auto;
-}
-
-@media (min-width: 50em) {
-  .layoutHero {
-    flex-direction: row;
-    align-items: center;
-    gap: var(--space-12x);
-  }
-
-  .heroContent {
-    flex: 1;
-  }
-
-  .heroImage {
-    flex: 1;
-  }
-
-  .heroTitle {
-    font-size: 3rem;
-  }
-
-  .heroDescription {
-    font-size: 1.25rem;
-  }
 }
